fix: fix request function return statments
