# src/config/swagger.yaml
@@ -221,4 +221,18 @@ paths:
               link: https://www.formula1.com
       responses:
         '200':
-          description: social link updated                   
+          description: social link updated    
+  /links/delete/{id}:            
+    delete:
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: number
+            example: 1
+          required: true
+      tags:
+        - Social-links      
+      responses:
+        '200':
+          description: social link removed                       
